--- a/travelagent.html
+++ b/travelagent.html
@@ -176,7 +176,7 @@
         <!-- Box 1 -->
         <div class="box">
             <div class="image">
-                <img src="images/kecak.JPG" alt="Kecak Dance Image">
+                <img src="images/Kecak.JPG" alt="Kecak Dance Image">
             </div>
             <div class="content">
                 <h3>Uluwatu Tour</h3>
@@ -188,7 +188,7 @@
 <!-- box 2-->
         <div class="box">
             <div class="image">
-                <img src="images/tukad.PNG" alt="Kecak Dance Image">
+                <img src="images/TUKAD.PNG" alt="Kecak Dance Image">
             </div>
             <div class="content">
                 <h3>Ubud Tour</h3>
@@ -201,7 +201,7 @@
         <!-- Box 3 -->
         <div class="box">
             <div class="image">
-                <img src="images/rice.PNG" alt="Rice Terrace Image">
+                <img src="images/Rice.PNG" alt="Rice Terrace Image">
             </div>
             <div class="content">
                 <h3>Nature & Culture</h3>
