--- a/travelagent.html
+++ b/travelagent.html
@@ -76,7 +76,7 @@
             </div>
 
             <!-- Slide 3 -->
-            <div class="swiper-slide slide" style="background-image: url(images/rice.PNG);">
+            <div class="swiper-slide slide" style="background-image: url(images/Rice.png);">
                 <div class="content">
                     <span>explore, discover, travel</span>
                     <h3>discover the new place</h3>
@@ -153,7 +153,7 @@
 
 <section class="home-about"> 
     <div class="images">
-        <img src="images/monkey.JPG" alt="Monkey Image">
+        <img src="images/Monkey.JPG" alt="Monkey Image">
     </div>
     <div class="content">
         <h3>About Us</h3>
@@ -188,7 +188,7 @@
 <!-- box 2-->
         <div class="box">
             <div class="image">
-                <img src="images/TUKAD.PNG" alt="Kecak Dance Image">
+                <img src="images/TUKAD.png" alt="Kecak Dance Image">
             </div>
             <div class="content">
                 <h3>Ubud Tour</h3>
@@ -201,7 +201,7 @@
         <!-- Box 3 -->
         <div class="box">
             <div class="image">
-                <img src="images/Rice.PNG" alt="Rice Terrace Image">
+                <img src="images/Rice.png" alt="Rice Terrace Image">
             </div>
             <div class="content">
                 <h3>Nature & Culture</h3>
