--- a/travelagent.html
+++ b/travelagent.html
@@ -153,7 +153,7 @@
 
 <section class="home-about"> 
     <div class="images">
-        <img src="images/Monkey.JPG" alt="Monkey Image">
+        <img src="images/Monkey.jpg" alt="Monkey Image">
     </div>
     <div class="content">
         <h3>About Us</h3>
@@ -176,7 +176,7 @@
         <!-- Box 1 -->
         <div class="box">
             <div class="image">
-                <img src="images/Kecak.JPG" alt="Kecak Dance Image">
+                <img src="images/Kecak.jpg" alt="Kecak Dance Image">
             </div>
             <div class="content">
                 <h3>Uluwatu Tour</h3>
